View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032038 | Open CASCADE | OCCT:Visualization | public | 2021-01-04 11:55 | 2021-01-16 14:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032038: Visualization, OpenGl_View - move out framebuffer initialization from ::Redraw() to ::prepareFrameBuffers() | ||||
Description | Currently OpenGl_View::Redraw() is overloaded with a large block initializing FBOs. It is proposed moving out this block into dedicated method OpenGl_View::prepareFrameBuffers(). | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32038 has been created by kgv. SHA-1: 2cb977151ff7b427d639b3a783525ea516507d88 Detailed log of new commits: Author: kgv Date: Mon Jan 4 03:26:51 2021 +0300 0032038: Visualization, OpenGl_View - move out framebuffer initialization from ::Redraw() to ::prepareFrameBuffers() |
|
Please raise the patch - OCCT branch: CR32038. |
|
Combination - OCCT branch : IR-2021-01-15 master SHA - 6fab0b34288ef3f29ecf4eabc0283540460dbc31 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2021-01-15 SHA - a8521c25e41405ac279e65e1fcde5de75a344b0b was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17754.160000000134 / 17720.07000000011 [+0.19%] Products Total CPU difference: 12412.630000000105 / 12419.360000000095 [-0.05%] Windows-64-VC14: OCCT Total CPU difference: 19336.3125 / 19330.015625 [+0.03%] Products Total CPU difference: 13740.03125 / 13831.828125 [-0.66%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
occt: master 4b7fee8f 2021-01-04 00:26:51 Committer: bugmaster Details Diff |
0032038: Visualization, OpenGl_View - move out framebuffer initialization from ::Redraw() to ::prepareFrameBuffers() |
Affected Issues 0032038 |
|
mod - src/OpenGl/OpenGl_View.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_View_Redraw.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-01-04 11:55 | kgv | New Issue | |
2021-01-04 11:55 | kgv | Assigned To | => kgv |
2021-01-04 12:08 | kgv | Relationship added | related to 0032040 |
2021-01-09 23:33 | git | Note Added: 0098020 | |
2021-01-10 02:04 | kgv | Note Added: 0098030 | |
2021-01-10 02:04 | kgv | Assigned To | kgv => bugmaster |
2021-01-10 02:04 | kgv | Status | new => resolved |
2021-01-10 02:05 | kgv | Status | resolved => reviewed |
2021-01-16 13:29 | bugmaster | Note Added: 0098139 | |
2021-01-16 13:29 | bugmaster | Status | reviewed => tested |
2021-01-16 13:40 | bugmaster | Test case number | => Not required |
2021-01-16 14:12 | bugmaster | Changeset attached | => occt master 4b7fee8f |
2021-01-16 14:12 | bugmaster | Status | tested => verified |
2021-01-16 14:12 | bugmaster | Resolution | open => fixed |